Added main content

--- a/defi.html
+++ b/defi.html
@@ -31,7 +31,67 @@
             </nav>
         </header>
 
+        <div id="bloc_contenu">
+            <section id="section1">
+                <img
+                    src="./images/backgroung_image.jpg"
+                    alt="image de fond"
+                />
 
+                <img
+                    src="./images/logo_long.png"
+                    alt="logo Mon petit graphisme"
+                />
+                <h1>
+                    Agence de graphisme
+                </h1>
+            </section>
+
+            <section id="section2">
+                <article>Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des visuels
+                    attractifs
+                </article>
+                <div id="competences">
+                    <article id="article1">
+                        <img
+                            src="./images/graphic-design.png"
+                            alt="logo design graphique"
+                        >
+                        <h2>graphisme</h2>
+                        <p>Que vous ayez besoin de graphisme pour un site web, des cartes de visites ou des affiches,
+                            nous réalisons des visuels dont vous serez fiers.</p>
+
+                    </article>
+                    <article id="article2">
+                        <img
+                            src="./images/strategie.png"
+                            alt="logo stratégie"
+                        >
+                        <h2>stratégie</h2>
+                        <p>Plutôt que de suggérer des graphismes à la mode, nous prenons le temps de comprendre vos
+                            objectifs et nous nous adaptons à vos besoins</p>
+                    </article>
+                    <article id="article3">
+                        <img
+                            src="./images/illustrations.png"
+                            alt="logo stratégie"
+                        >
+                        <h2>illustrations</h2>
+                        <p>Nos graphistes vous proposerons des illustrations 100% originales</p>
+                    </article>
+                </div>
+                <div id="citation">
+                    <p id="texte_citation">
+                        Mon petit graphisme est une excellente agence de graphisme. Les graphistes sont à l'écoute des
+                        besoins et m'ont permis de renouveler complètement la carte de mon restaurant
+                    </p>
+                    <p id="auteur_citation">
+                        Amandine, restauratrice
+                    </p>
+                </div>
+            </section>
+
+        </div>
 
     </div>
 
